// Vitest Snapshot v1

exports[`matches snapshots for { a: [Combination], c: 6 } 1`] = `
[
  {
    "a": [],
  },
  {
    "a": [
      1,
    ],
  },
  {
    "a": [
      2,
    ],
  },
  {
    "a": [
      1,
      2,
    ],
  },
]
`;

exports[`matches snapshots for { a: [Combination], l: [Combination], b: 10, c: 6 } 1`] = `
[
  {
    "a": [],
    "l": 5,
  },
  {
    "a": [
      1,
    ],
    "l": 5,
  },
  {
    "a": [
      2,
    ],
    "l": 5,
  },
  {
    "a": [
      1,
      2,
    ],
    "l": 5,
  },
  {
    "a": [],
  },
  {
    "a": [
      1,
    ],
  },
  {
    "a": [
      2,
    ],
  },
  {
    "a": [
      1,
      2,
    ],
  },
]
`;

exports[`matches snapshots for { one: [Combination], optional: [Combination] } 1`] = `
[
  {
    "one": 1,
    "optional": 5,
  },
  {
    "one": 2,
    "optional": 5,
  },
  {
    "one": 1,
  },
  {
    "one": 2,
  },
]
`;
